# uwa-llm-equalizer-research

./: .gitattributes  .gitignore  2026-06-08-uwa-llm-equalizer-implementation-plan.md  AGENTS.md  AI_RESEARCH_COLLABORATION_GUIDELINES.md  PROJECT_HANDOFF.md  README.md
BER_predicting-main/: BER_predicting_DNN.py  README.md
DDQN_adaptive_modulation_coding-main/: BER_Cacula.m  BER_generate_new.m  DDQN.py  channel_es_LS.m  classification_test.py  fadePilot.m  transEnv.py
LLM4WM-main/LLM4WM-main/: README.md  metrics.py
Multi-task PHY LLM/code_final_version/: datasets.py  evaluate.py  finetune.py  quantize_and_save.py  readme.txt  utils.py
estimate-main/: README.md  est.m  main.m  plots.m
matlab-main/: .gitignore  CONTRIBUTING.md  README.md
matlab-main/.github/workflows/: ci.yml
matlab-main/examples/: example_replay.m  example_unpack.m
matlab-main/src/: noisegen.m  replay.m  unpack.m
matlab-main/tests/: testNoise.m  testReplay.m  testUnpack.m
python-main-Underwater Acoustic Channels Group-lizhengnan/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
python-main-Underwater Acoustic Channels Group-lizhengnan/.github/workflows/: ci.yaml
python-main-Underwater Acoustic Channels Group-lizhengnan/examples/: example_replay.py  example_unpack.py
python-main-Underwater Acoustic Channels Group-lizhengnan/src/uwa_channels/: __init__.py  noisegen.py  replay.py  unpack.py
python-main-Underwater Acoustic Channels Group-lizhengnan/tests/: test_noise.py  test_replay.py  test_unpack.py
watermark-D/: readme.txt
(+5 files in other folders)
